[android] Make recorder docker not trap files

On Android, no user-visible directories are writeable by default. That
means QDir::homePath() is an application-internal directory by default,
which means the recorder docker's default storage location dumps file in
a place inaccessible to the user. To add insult to injury, the user
can't actually create a timelapse video from these files on Android due
to an absent ffmpeg, meaning all they do is take up space. And to add
torture to insult, if the user changes the recording directory to an
external one while they have files lingering in the internal directory,
they can no longer revert to that directory, rendering them unable to
delete those (often large) useless files without clearing Krita's data
altogether, losing all configuration.

This patch changes the recorder's default directory to be empty on
Android, since we don't have a sensible default we can use. The user
must choose a directory themselves, where they will give Krita
permission to write to that directory.

That requires the docker to actually handle an empty directory properly.
It no longer tries to start an auto-recording when the path is empty.
When the user hits the record button without selecting a directory, they
will be prompted to do so before recording starts (or aborts, if they
don't pick any directory.)

Finally, to rectify the past situation, if the default path is selected,
it will get turned into an empty path instead. If the internal directory
exists and the user has selected a different directory for us to write
to, the files will be moved over.

BUG:507284