plugins/dockers/recorder/recorder_config.h
@@ -51,6 +51,15 @@ public:
     bool recordAutomatically() const;
     void setRecordAutomatically(bool value);
 
+#ifdef Q_OS_ANDROID
+    // Returns the internal storage directory that older versions of Krita
+    // defaulted to. Using this directory to store recordings is bogus, since
+    // it's effectively inacessible to the user. This path is used to rectify
+    // the situation and move stuff out of this directory when the user has
+    // given permission to a "real" one.
+    static const QString &defaultInternalSnapshotDirectory();
+#endif
+
 private:
     Q_DISABLE_COPY(RecorderConfig)
     mutable KisConfig *config;
